--- a/resume.html
+++ b/resume.html
@@ -7,18 +7,34 @@
     <style>
         body {
             background-color: linen;
-            
+            color:black;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        }
+        header{
+            border-bottom-width: 2px;
+        }
+        .proAch{
+            margin-inline: 1;
+        }
+        .workHist{
+            margin-inline: 1;
+        }
+        .ed {
+            margin-inline: 1;
+        }
+        img {
+            width: 150px;
         }
     </style>
     <body>
         <header>
-        <h1>Andrew Carey</h1>
-        <img src="https://media-exp1.licdn.com/dms/image/C4E03AQFQ288loLc5Cg/profile-displayphoto-shrink_800_800/0/1655941282252?e=1664409600&v=beta&t=7Z4zePmm-LWxEHEpgMZSAIsX784C2AwXT2T2iGYoNeo"/>
-        <h4>3878 McKnight Rd N, White Bear Lake, MN 55110</h4>
-        <h4>651-367-4099</h4>
-        <h2>andrew.r.carey@gmail.com</h2>
+            <h1>Andrew Carey</h1>
+            <img src="https://media-exp1.licdn.com/dms/image/C4E03AQFQ288loLc5Cg/profile-displayphoto-shrink_800_800/0/1655941282252?e=1664409600&v=beta&t=7Z4zePmm-LWxEHEpgMZSAIsX784C2AwXT2T2iGYoNeo">
+            <h4>3878 McKnight Rd N, White Bear Lake, MN 55110</h4>
+            <h4>651-367-4099</h4>
+            <h4>andrew.r.carey@gmail.com</h4>
         </header>
-        <div>
+        <div class="proAch">
             <h2>Professional Achievements</h2>
             <ul>
                 <h4>Production Manager</h4>
@@ -41,7 +57,7 @@
             </ul>
         </div>
 
-        <div>
+        <div class="workHist">
             <h2>Work History</h2>
             <ul>
                 <li>Audio Systems Engineer - University of Northwestern-St Paul     Fall 2016-Present</li>
@@ -51,7 +67,7 @@
             </ul>
         </div>
 
-        <div>
+        <div class="ed">
             <h2>Education</h2>
             <ul>
                 <li>Bachelor of Arts, Electronic Media Communications, University of Northwestern-St. Paul.     May 2010</li>
