--- a/resume.html
+++ b/resume.html
@@ -10,26 +10,47 @@
             color:black;
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         }
-        header{
-            border-bottom-width: 2px;
+        header {
+            display:flex;
+            justify-content: space-evenly;
+            border: 5%;
         }
+        .column-1{
+            display: flex;
+            justify-content: center;
+        }
+        .column-2{
+            display: flex;
+            justify-content: center;
+        }
+
         .proAch{
+
         }
         .workHist{
+
         }
         .ed {
+
         }
         img {
             width: 150px;
+            float: right;
         }
     </style>
     <body>
         <header>
-            <h1>Andrew Carey</h1>
+            <div style="column-1">
+                <h1>Andrew Carey</h1>
+                <h4>3878 McKnight Rd N, White Bear Lake, MN 55110</h4>
+            </div>
+            <div style="column-1">
+                <h4>651-367-4099</h4>
+                <h4>andrew.r.carey@gmail.com</h4>
+            </div>
             <img src="https://media-exp1.licdn.com/dms/image/C4E03AQFQ288loLc5Cg/profile-displayphoto-shrink_800_800/0/1655941282252?e=1664409600&v=beta&t=7Z4zePmm-LWxEHEpgMZSAIsX784C2AwXT2T2iGYoNeo">
-            <h4>3878 McKnight Rd N, White Bear Lake, MN 55110</h4>
-            <h4>651-367-4099</h4>
-            <h4>andrew.r.carey@gmail.com</h4>
+            
+
         </header>
         <div class="proAch">
             <h2>Professional Achievements</h2>
