--- a/resume.html
+++ b/resume.html
@@ -9,36 +9,46 @@
             background-color: linen;
             color:black;
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-            display: flex;
+          /*  display: flex;
             align-items: flex-start;
-            flex-direction: column;
+            flex-direction: column;*/
         }
         header {
             display: flex;
             flex-direction: row;
-            justify-items: space-between;
+            align-items: space-between;
             align-self: center;
             flex-wrap: wrap;
-            border: 5%;
         }
-        .column{
-            margin: 10px;
-            
+        .column {
+            margin: 20px;
+            display: flex;
+            flex-direction: column;
+            align-self: flex-start;
+        }
+        .contact {
+            margin: 20px;
+            display: flex;
+            flex-direction: column-reverse;
         }
         img {
             width: 150px;
-            padding: 10px;
+            padding: 20px;
+            
         }
     </style>
     <body>
         <header>
             <div class="column">
                 <h1>Andrew Carey</h1>
-                <h4>3878 McKnight Rd N, White Bear Lake, MN 55110</h4>
+                <p>Bringing value and joy to any team.</p>
             </div>
-            <div class="column">
-                <h4>651-367-4099</h4>
-                <h4>andrew.r.carey@gmail.com</h4>
+            <div class="contact">
+                <ul style="list-style-type:none">
+                    <li>651-367-4099</li>
+                    <li>andrew.r.carey@gmail.com</li>
+                    <li>3878 McKnight Rd N, White Bear Lake, MN 55110</li>
+                </ul>
             </div>
             <div>
                 <img src="https://media-exp1.licdn.com/dms/image/C4E03AQFQ288loLc5Cg/profile-displayphoto-shrink_800_800/0/1655941282252?e=1664409600&v=beta&t=7Z4zePmm-LWxEHEpgMZSAIsX784C2AwXT2T2iGYoNeo">
