--- a/resume.html
+++ b/resume.html
@@ -19,6 +19,7 @@
             align-items: space-between;
             align-self: center;
             flex-wrap: wrap;
+            margin: 10%;
         }
         .column {
             margin: 20px;
@@ -34,7 +35,9 @@
         img {
             width: 150px;
             padding: 20px;
-            
+        }
+        .content{
+            margin: 8%;
         }
     </style>
     <body>
@@ -55,7 +58,7 @@
             </div>
 
         </header>
-        <div class="proAch">
+        <div class="content">
             <h2>Professional Achievements</h2>
             <ul>
                 <h4>Production Manager</h4>
@@ -78,7 +81,7 @@
             </ul>
         </div>
 
-        <div class="workHist">
+        <div class="content">
             <h2>Work History</h2>
             <ul>
                 <li>Audio Systems Engineer - University of Northwestern-St Paul     Fall 2016-Present</li>
@@ -88,7 +91,7 @@
             </ul>
         </div>
 
-        <div class="ed">
+        <div class="content">
             <h2>Education</h2>
             <ul>
                 <li>Bachelor of Arts, Electronic Media Communications, University of Northwestern-St. Paul.     May 2010</li>
