--- a/resume.html
+++ b/resume.html
@@ -9,9 +9,6 @@
             background-color: linen;
             color:black;
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-          /*  display: flex;
-            align-items: flex-start;
-            flex-direction: column;*/
         }
         header {
             display: flex;
@@ -30,7 +27,9 @@
         .contact {
             margin: 20px;
             display: flex;
-            flex-direction: column-reverse;
+            flex-direction: column;
+            align-self: flex-end;
+            font-size: smaller;
         }
         img {
             width: 150px;
