re-order, add future ed Beta 1.1

--- a/resume.html
+++ b/resume.html
@@ -57,6 +57,24 @@
             </div>
 
         </header>
+
+        <div class="content">
+            <h2>Work History</h2>
+            <ul>
+                <li>Audio Systems Engineer - University of Northwestern-St Paul     Fall 2016-Present</li>
+                <li>Production Manager - Five Oaks Church, Woodbury MN      Spring 2015-Fall 2016</li>
+                <li>Audio Engineer - Eagle Brook Church, White Bear Lake MN     Fall 2011-Spring 2015</li>
+                <li>Media Specialist - William Mitchell College of Law, St Paul MN      Summer 2010-Fall 2011</li>
+            </ul>
+        </div>
+        <div class="content">
+            <h2>Education</h2>
+            <ul>
+                <li>Bachelor of Arts, Electronic Media Communications, University of Northwestern-St. Paul.     May 2010</li>
+                <li>Prime Academy, Minneapolis, MN.     Future!</li>
+
+            </ul>
+        </div>
         <div class="content">
             <h2>Professional Achievements</h2>
             <ul>
@@ -80,21 +98,5 @@
             </ul>
         </div>
 
-        <div class="content">
-            <h2>Work History</h2>
-            <ul>
-                <li>Audio Systems Engineer - University of Northwestern-St Paul     Fall 2016-Present</li>
-                <li>Production Manager - Five Oaks Church, Woodbury MN      Spring 2015-Fall 2016</li>
-                <li>Audio Engineer - Eagle Brook Church, White Bear Lake MN     Fall 2011-Spring 2015</li>
-                <li>Media Specialist - William Mitchell College of Law, St Paul MN      Summer 2010-Fall 2011</li>
-            </ul>
-        </div>
-
-        <div class="content">
-            <h2>Education</h2>
-            <ul>
-                <li>Bachelor of Arts, Electronic Media Communications, University of Northwestern-St. Paul.     May 2010</li>
-            </ul>
-        </div>
     </body>
 </html>
