--- a/resume.html
+++ b/resume.html
@@ -36,7 +36,11 @@
             padding: 20px;
         }
         .content{
-            margin: 8%;
+            margin-left: 15%;
+            margin-right: 15%;
+            margin-top: 10px;
+            margin-bottom: 10px;
+
         }
     </style>
     <body>
