--- a/resume.html
+++ b/resume.html
@@ -23,46 +23,46 @@
             </div>
 
         </header>
+        <main>
+            <div class="content">
+                <h2>Work History</h2>
+                <ul>
+                    <li>Audio Systems Engineer - University of Northwestern-St Paul     Fall 2016-Present</li>
+                    <li>Production Manager - Five Oaks Church, Woodbury MN      Spring 2015-Fall 2016</li>
+                    <li>Audio Engineer - Eagle Brook Church, White Bear Lake MN     Fall 2011-Spring 2015</li>
+                    <li>Media Specialist - William Mitchell College of Law, St Paul MN      Summer 2010-Fall 2011</li>
+                </ul>
+            </div>
+            <div class="content">
+                <h2>Education</h2>
+                <ul>
+                    <li>Bachelor of Arts, Electronic Media Communications, University of Northwestern-St. Paul.     May 2010</li>
+                    <li>Prime Academy, Minneapolis, MN.     Future!</li>
 
-        <div class="content">
-            <h2>Work History</h2>
-            <ul>
-                <li>Audio Systems Engineer - University of Northwestern-St Paul     Fall 2016-Present</li>
-                <li>Production Manager - Five Oaks Church, Woodbury MN      Spring 2015-Fall 2016</li>
-                <li>Audio Engineer - Eagle Brook Church, White Bear Lake MN     Fall 2011-Spring 2015</li>
-                <li>Media Specialist - William Mitchell College of Law, St Paul MN      Summer 2010-Fall 2011</li>
-            </ul>
-        </div>
-        <div class="content">
-            <h2>Education</h2>
-            <ul>
-                <li>Bachelor of Arts, Electronic Media Communications, University of Northwestern-St. Paul.     May 2010</li>
-                <li>Prime Academy, Minneapolis, MN.     Future!</li>
-
-            </ul>
-        </div>
-        <div class="content">
-            <h2>Professional Achievements</h2>
-            <ul>
-                <h4>Production Manager</h4>
-                <li>Volunteer Management and Recruitment</li>
-                <li>Management of Budget</li>
-                <li>Maintenance of Audio, Video, Lighting Equipment</li>
-            </ul>
-            <ul>
-                <h4>Audio Systems Engineer/Audio Tech</h4>
-                <li>FOH Rock Concert Mixing</li>
-                <li>Band and Orchestra Ensambles</li>
-                <li>Theatrical Performances</li>
-                <li>Choir and Vocal Performances</li>
-            </ul>
-            <ul>
-                <h4>Media Specialst</h4>
-                <li>Help Desk</li>
-                <li>Classroom Support</li>
-                <li>Live Streams</li>
-            </ul>
-        </div>
-
+                </ul>
+            </div>
+            <div class="content">
+                <h2>Professional Achievements</h2>
+                <ul>
+                    <h4>Production Manager</h4>
+                    <li>Volunteer Management and Recruitment</li>
+                    <li>Management of Budget</li>
+                    <li>Maintenance of Audio, Video, Lighting Equipment</li>
+                </ul>
+                <ul>
+                    <h4>Audio Systems Engineer/Audio Tech</h4>
+                    <li>FOH Rock Concert Mixing</li>
+                    <li>Band and Orchestra Ensembles</li>
+                    <li>Theatrical Performances</li>
+                    <li>Choir and Vocal Performances</li>
+                </ul>
+                <ul>
+                    <h4>Media Specialst</h4>
+                    <li>Help Desk</li>
+                    <li>Classroom Support</li>
+                    <li>Live Streams</li>
+                </ul>
+            </div>
+        </main>
     </body>
 </html>
